--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -2,24 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "5b179ce6",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: gensim in /home/rogermiranda1000/.local/lib/python3.8/site-packages (4.3.1)\n",
-      "Requirement already satisfied: smart-open>=1.8.1 in /home/rogermiranda1000/.local/lib/python3.8/site-packages (from gensim) (6.3.0)\n",
-      "Requirement already satisfied: scipy>=1.7.0 in /home/rogermiranda1000/.local/lib/python3.8/site-packages (from gensim) (1.9.3)\n",
-      "Requirement already satisfied: numpy>=1.18.5 in /home/rogermiranda1000/.local/lib/python3.8/site-packages (from gensim) (1.23.3)\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mdatetime\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgensim\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m word2vec\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfeature_extraction\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtext\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CountVectorizer,TfidfTransformer\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m#from sklearn.linear_model import SGDRegressor, SGDClassifier\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mneural_network\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MLPClassifier\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
      ]
     }
    ],
    "source": [
-    "!pip install gensim\n",
-    "\n",
     "import numpy as np\n",
     "import gzip\n",
     "import re\n",
@@ -39,19 +40,40 @@
    "execution_count": 2,
    "id": "1c523f73",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'List' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mSentimentAnalysis\u001b[39;00m():\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, json_file, hidden_layer \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m300\u001b[39m,\u001b[38;5;241m50\u001b[39m), random_state: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m      3\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reviews\u001b[38;5;241m=\u001b[39mjson\u001b[38;5;241m.\u001b[39mload(gzip\u001b[38;5;241m.\u001b[39mopen(json_file,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m))\n",
+      "Cell \u001b[0;32mIn[2], line 9\u001b[0m, in \u001b[0;36mSentimentAnalysis\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_random_state \u001b[38;5;241m=\u001b[39m random_state\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;129m@property\u001b[39m\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mreviews\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[43mList\u001b[49m[Dict[\u001b[38;5;28mstr\u001b[39m,Any]]:\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reviews\n\u001b[1;32m     12\u001b[0m \u001b[38;5;129m@property\u001b[39m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mlargest_review_size\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mint\u001b[39m:\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;66;03m# @ref https://stackoverflow.com/a/1582670/9178470\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'List' is not defined"
+     ]
+    }
+   ],
    "source": [
     "class SentimentAnalysis():\n",
     "    def __init__(self, json_file, hidden_layer = (300,50), random_state: int = None):\n",
     "        self._reviews=json.load(gzip.open(json_file,'rb'))\n",
     "        self._hidden_layer = hidden_layer\n",
     "        self._random_state = random_state\n",
-    "        self.reviewsStopWords=json.load(gzip.open('data/Watches_withstopwords.json.gz','rb'))\n",
     "        pass\n",
     "    \n",
     "    @property\n",
     "    def reviews(self) -> List[Dict[str,Any]]:\n",
     "        return self._reviews\n",
+    "    \n",
+    "    @property\n",
+    "    def largest_review_size(self) -> int:\n",
+    "        # @ref https://stackoverflow.com/a/1582670/9178470\n",
+    "        return len(max(self.review_sentences, key=len))\n",
+    "        \n",
+    "    @property\n",
+    "    def review_sentences(self) -> np.array:\n",
+    "        return np.array([x['text'] for x in self._reviews])\n",
     "    \n",
     "    def makeBoW(self):\n",
     "        count_vectorizer=CountVectorizer()\n",
@@ -86,7 +108,7 @@
     "        print(classification_report(self.scores_test,np.round(self.model.predict(self.BoW_test))))\n",
     "\n",
     "    def makeWord2Vec(self):\n",
-    "        sentences=np.array([x['text'] for x in self.reviewsStopWords])\n",
+    "        sentences=self.review_sentences\n",
     "        self.model = word2vec.Word2Vec(sentences, size=300, window=5, min_count=5, workers=12)\n",
     "        pass\n",
     "    \n",
@@ -158,6 +180,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "eb0cc499",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'SaHandler' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mSaHandler\u001b[49m\u001b[38;5;241m.\u001b[39mlargest_review_size)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'SaHandler' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(SaHandler.largest_review_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "674e3b7f",
    "metadata": {},
@@ -211,9 +255,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "sentiment-analysis",
    "language": "python",
-   "name": "python3"
+   "name": "sentiment-analysis"
   },
   "language_info": {
    "codemirror_mode": {
@@ -225,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
