Feature: word2vec

--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -2,24 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "5b179ce6",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sklearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mdatetime\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgensim\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m word2vec\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfeature_extraction\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtext\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CountVectorizer,TfidfTransformer\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m#from sklearn.linear_model import SGDRegressor, SGDClassifier\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mneural_network\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MLPClassifier\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import gzip\n",
@@ -28,32 +16,21 @@
     "import datetime\n",
     "from gensim.models import word2vec\n",
     "from sklearn.feature_extraction.text import CountVectorizer,TfidfTransformer\n",
-    "#from sklearn.linear_model import SGDRegressor, SGDClassifier\n",
     "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.cluster import KMeans\n",
     "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "\n",
+    "import multiprocessing # number of threads\n",
+    "\n",
     "from typing import Dict,Any,List"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "id": "1c523f73",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'List' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mSentimentAnalysis\u001b[39;00m():\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, json_file, hidden_layer \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m300\u001b[39m,\u001b[38;5;241m50\u001b[39m), random_state: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m      3\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reviews\u001b[38;5;241m=\u001b[39mjson\u001b[38;5;241m.\u001b[39mload(gzip\u001b[38;5;241m.\u001b[39mopen(json_file,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m))\n",
-      "Cell \u001b[0;32mIn[2], line 9\u001b[0m, in \u001b[0;36mSentimentAnalysis\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_random_state \u001b[38;5;241m=\u001b[39m random_state\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;129m@property\u001b[39m\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mreviews\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[43mList\u001b[49m[Dict[\u001b[38;5;28mstr\u001b[39m,Any]]:\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reviews\n\u001b[1;32m     12\u001b[0m \u001b[38;5;129m@property\u001b[39m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mlargest_review_size\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mint\u001b[39m:\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;66;03m# @ref https://stackoverflow.com/a/1582670/9178470\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'List' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class SentimentAnalysis():\n",
     "    def __init__(self, json_file, hidden_layer = (300,50), random_state: int = None):\n",
@@ -72,8 +49,8 @@
     "        return len(max(self.review_sentences, key=len))\n",
     "        \n",
     "    @property\n",
-    "    def review_sentences(self) -> np.array:\n",
-    "        return np.array([x['text'] for x in self._reviews])\n",
+    "    def review_sentences(self) -> List[str]:\n",
+    "        return [x['text'] for x in self._reviews]\n",
     "    \n",
     "    def makeBoW(self):\n",
     "        count_vectorizer=CountVectorizer()\n",
@@ -107,32 +84,54 @@
     "        print(confusion_matrix(self.scores_test,np.round(self.model.predict(self.BoW_test))))\n",
     "        print(classification_report(self.scores_test,np.round(self.model.predict(self.BoW_test))))\n",
     "\n",
-    "    def makeWord2Vec(self):\n",
+    "    def train_word2vec_model(self, size: int, window: int = 5, min_count: int = 5, workers: int = -1) -> word2vec.Word2Vec:\n",
+    "        \"\"\"\n",
+    "        Get a word2vec model according to the input data.\n",
+    "        @ref https://radimrehurek.com/gensim/models/word2vec.html#gensim.models.word2vec.Word2Vec\n",
+    "        \n",
+    "        @param size:      Dimensionality of the word vectors\n",
+    "        @param window:    Maximum distance between the current and predicted word\n",
+    "        @param min_count: Ignores all words with total frequency lower than this\n",
+    "        @param workers:   Use these many worker threads to train the model; -1 to use all\n",
+    "        @return Word2Vec model\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        \n",
     "        sentences=self.review_sentences\n",
-    "        self.model = word2vec.Word2Vec(sentences, size=300, window=5, min_count=5, workers=12)\n",
-    "        pass\n",
+    "        \n",
+    "        if workers == -1:\n",
+    "            workers = SentimentAnalysis.get_num_max_workers()\n",
+    "            print(f\"[v] Using {workers} workers for the Word2Vec operation...\")\n",
+    "            \n",
+    "        return word2vec.Word2Vec(sentences, vector_size=size, window=window,\n",
+    "                                       min_count=min_count, workers=workers)\n",
     "    \n",
-    "    def saveWord2Vec(self,model):\n",
-    "        self.model.save(model)\n",
-    "        pass\n",
+    "    @staticmethod\n",
+    "    def get_num_max_workers() -> int:\n",
+    "        return multiprocessing.cpu_count()\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def save_word2vec(model: word2vec.Word2Vec, file_name: str):\n",
+    "        model.save(file_name)\n",
     "\n",
-    "    def loadWord2Vec(self,model):\n",
-    "        self.model=word2vec.Word2Vec.load(model)\n",
+    "    @staticmethod\n",
+    "    def load_word2vec(file_name: str) -> word2vec.Word2Vec:\n",
+    "        return word2vec.Word2Vec.load(file_name)\n",
     "\n",
-    "    def clusterize(self):\n",
+    "    def clusterize(self, model: word2vec.Word2Vec):\n",
     "        # Set \"k\" (num_clusters) to be 1/5th of the vocabulary size, or an\n",
     "        # average of 30 words per cluster\n",
     "\n",
-    "        word_vectors = self.model.wv.vectors\n",
+    "        word_vectors = model.wv.vectors\n",
     "        num_clusters = 10\n",
     "\n",
     "        # Initalize a k-means object and use it to extract centroids\n",
-    "        kmeans_clustering = KMeans( n_clusters = num_clusters )\n",
+    "        kmeans_clustering = KMeans( n_clusters = num_clusters, n_init='auto' )\n",
     "        idx = kmeans_clustering.fit_predict( word_vectors )\n",
     "\n",
     "        # Create a Word / Index dictionary, mapping each vocabulary word to\n",
     "        # a cluster number\n",
-    "        word_centroid_map = dict(list(zip( self.model.wv.index2word, idx )))\n",
+    "        word_centroid_map = dict(list(zip( model.wv.index_to_key, idx )))\n",
     "\n",
     "        # For the first 10 clusters\n",
     "        for cluster in range(0,10):\n",
@@ -147,16 +146,12 @@
     "                    words.append(list(word_centroid_map.keys())[i])\n",
     "            print(words[:10])\n",
     "\n",
-    "        pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "28340023",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        pass\n",
+    "\n",
+    "# global variables\n",
+    "WORD2VEC_VECTOR_SIZE = 300\n",
+    "\n",
+    "# create an inscance of the class\n",
     "SaHandler=SentimentAnalysis('data/Watches_withstopwords.json.gz', random_state=1)"
    ]
   },
@@ -170,7 +165,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.0: owned two previous g shocks life including first series 1984 long appreciated quality main reason stopped wearing simply resin straps would break worn 4 years grew weary however burned many fashion watches last 10 years disappointed spend get 1 2 years worth usage back g shock think model g1710d 7av represents nice blend good looks practical durability guys really face smaller wrist expected g shock think still classy office side buttons hidden gray plastic see picture rest watch metal might find classier analog face g shock 200 300 one better value reason didn give 5 stars led isn backlight amber light comes around inside bevel led helps read dial hands lcd screens nonetheless still cool light color ps bottom lcd screen isn blue pictured still different color top lcd adds distinction watch\n"
+      "4.0: having owned two previous g shocks in my life including the first series in 1984 i ve long appreciated their quality the main reason i stopped wearing them was simply because the resin straps would break and having worn them for 4 years i grew weary of them however having burned through many fashion watches in the last 10 years i ve been disappointed to spend only to get 1 or 2 years worth of usage so i m back to g shock i think this model g1710d 7av represents a nice blend between good looks and practical durability which most guys really want the face is smaller on my wrist than i expected from a g shock but i think it s still classy for the office the side buttons are hidden in gray plastic which you can t see in picture but the rest of the watch is metal you might find a classier analog face g shock in the 200 300 but this one is a better value the only reason i didn t give it 5 stars is because the led isn t backlight it s an amber light that comes around the inside bevel so the led helps you read the dial hands but not the lcd screens nonetheless it s still a cool light color ps the bottom lcd screen isn t blue as pictured but it s still a different color than the top lcd which adds further distinction to the watch\n"
      ]
     }
    ],
@@ -180,51 +175,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "eb0cc499",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'SaHandler' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mSaHandler\u001b[49m\u001b[38;5;241m.\u001b[39mlargest_review_size)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'SaHandler' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "print(SaHandler.largest_review_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "674e3b7f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(68356, 50664)\n"
+      "4187\n"
      ]
     }
    ],
    "source": [
-    "SaHandler.makeBoW()\n",
-    "# matriu de <nº documents> files x <nº paraules> columnes,\n",
-    "# indicant (per cada text) com d'important és l'aparició (si apareix) aquella/es paraula/es\n",
-    "# Retorna pesos de regularització L2 (la suma quadràtica és 1)\n",
-    "print(SaHandler.BoW.shape)"
+    "max_input_size = SaHandler.largest_review_size\n",
+    "print(max_input_size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44819367",
+   "metadata": {},
+   "source": [
+    "Here we'll train a Word2Vec model using the train data.\n",
+    "Word2Vec will learn word associations from a large corpus of text. It will be able to detect synonymous words,[ref](https://en.wikipedia.org/w/index.php?title=Word2vec&oldid=1143734439) as words are represented by vectors that states the context of that word."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
+   "id": "674e3b7f",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[v] Using 32 workers for the Word2Vec operation...\n"
+     ]
+    }
+   ],
+   "source": [
+    "word2vec_model = SaHandler.train_word2vec_model(WORD2VEC_VECTOR_SIZE)\n",
+    "SentimentAnalysis.save_word2vec(word2vec_model, 'word2vec.bin')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "6c664187",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Cluster 0\n",
+      "['or', 'work', 'never', 'water', 'while', 'wearing', 'working', 'worn', 'under', 'etc']\n",
+      "\n",
+      "Cluster 1\n",
+      "['i', 'was', 'had', 'me', 'bought', 'am', 'amazon', 'buy', 'he', 'first']\n",
+      "\n",
+      "Cluster 2\n",
+      "['of', 'that', 'have', 'as', 'one', 'watches', 'than', 'they', 'other', 've']\n",
+      "\n",
+      "Cluster 3\n",
+      "['you', 'time', 'if', 'use', 'day', 'battery', 'do', 'your', 'date', 'set']\n",
+      "\n",
+      "Cluster 4\n",
+      "['it', 'a', 'and', 'watch', 'is', 'this', 'but', 'not', 's', 'very']\n",
+      "\n",
+      "Cluster 5\n",
+      "['years', 'year', 'months', 'days', 'times', 'month', 'week', 'seconds', 'minutes', 'weeks']\n",
+      "\n",
+      "Cluster 6\n",
+      "['to', 'in', 'my', 'with', 't', 'so', 'at', 'has', 'can', 'just']\n",
+      "\n",
+      "Cluster 7\n",
+      "['are', 'which', 'face', 'light', 'read', 'see', 'hand', 'case', 'dial', 'hands']\n",
+      "\n",
+      "Cluster 8\n",
+      "['for', 'about', 'after', 'been', 'now', 'two', 'over', '2', '5', 'few']\n",
+      "\n",
+      "Cluster 9\n",
+      "['the', 'on', 'be', 'band', 'out', 'up', 'get', 'off', 'little', 'back']\n"
+     ]
+    }
+   ],
+   "source": [
+    "SaHandler.clusterize(word2vec_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "42528eaf",
    "metadata": {},
    "outputs": [],
