--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 71,
    "id": "5b179ce6",
    "metadata": {
     "scrolled": false
@@ -17,27 +17,37 @@
     "from gensim.models import word2vec\n",
     "from sklearn.feature_extraction.text import CountVectorizer,TfidfTransformer\n",
     "from sklearn.neural_network import MLPClassifier\n",
-    "from sklearn.cluster import KMeans\n",
     "from sklearn.metrics import confusion_matrix, classification_report\n",
     "\n",
+    "from sklearn.cluster import KMeans\n",
+    "\n",
     "import multiprocessing # number of threads\n",
+    "\n",
+    "import matplotlib.pyplot as plt # plot\n",
+    "import matplotlib.gridspec as gridspec\n",
     "\n",
     "from typing import Dict,Any,List"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "id": "1c523f73",
    "metadata": {},
    "outputs": [],
    "source": [
     "class SentimentAnalysis():\n",
-    "    def __init__(self, json_file, hidden_layer = (300,50), random_state: int = None):\n",
+    "    def __init__(self, json_file, hidden_layer = (300,50), train_test_split: float = 0.7, random_state: int = None):\n",
     "        self._reviews=json.load(gzip.open(json_file,'rb'))\n",
+    "        \n",
+    "        # split in train-test\n",
+    "        self._test_reviews=self._reviews[int(len(self._reviews)*train_test_split):]\n",
+    "        self._reviews=self._reviews[:-len(self._test_reviews)]\n",
+    "        \n",
+    "        # save variables for the rest of the functions\n",
     "        self._hidden_layer = hidden_layer\n",
     "        self._random_state = random_state\n",
-    "        pass\n",
+    "        self._train_test_split = train_test_split\n",
     "    \n",
     "    @property\n",
     "    def reviews(self) -> List[Dict[str,Any]]:\n",
@@ -60,18 +70,6 @@
     "        #Posem els scores en un array\n",
     "        self.scores=np.array([x['score'] for x in self._reviews])\n",
     "\n",
-    "    def divideTrainTest(self):\n",
-    "        is2013=[x['year']==2013 for x in self._reviews]\n",
-    "\n",
-    "        self.BoW_train=self.BoW[~np.array(is2013),:]\n",
-    "        self.scores_train=self.scores[~np.array(is2013)]\n",
-    "        self.BoW_test=self.BoW[np.array(is2013),:]\n",
-    "        self.scores_test=self.scores[np.array(is2013)]\n",
-    "        pass\n",
-    "\n",
-    "    def saveTrainTest(self):\n",
-    "        #Mireu np.save i (np.load Opcional)\n",
-    "        pass\n",
     "    def learn(self):\n",
     "        #To be fit by the student\n",
     "        learner=MLPClassifier(hidden_layer_sizes=self._hidden_layer, solver='lbfgs', alpha=1e-5, random_state=self._random_state)\n",
@@ -117,36 +115,6 @@
     "    @staticmethod\n",
     "    def load_word2vec(file_name: str) -> word2vec.Word2Vec:\n",
     "        return word2vec.Word2Vec.load(file_name)\n",
-    "\n",
-    "    def clusterize(self, model: word2vec.Word2Vec):\n",
-    "        # Set \"k\" (num_clusters) to be 1/5th of the vocabulary size, or an\n",
-    "        # average of 30 words per cluster\n",
-    "\n",
-    "        word_vectors = model.wv.vectors\n",
-    "        num_clusters = 10\n",
-    "\n",
-    "        # Initalize a k-means object and use it to extract centroids\n",
-    "        kmeans_clustering = KMeans( n_clusters = num_clusters, n_init='auto' )\n",
-    "        idx = kmeans_clustering.fit_predict( word_vectors )\n",
-    "\n",
-    "        # Create a Word / Index dictionary, mapping each vocabulary word to\n",
-    "        # a cluster number\n",
-    "        word_centroid_map = dict(list(zip( model.wv.index_to_key, idx )))\n",
-    "\n",
-    "        # For the first 10 clusters\n",
-    "        for cluster in range(0,10):\n",
-    "            #\n",
-    "            # Print the cluster number\n",
-    "            print(\"\\nCluster %d\" % cluster)\n",
-    "            #\n",
-    "            # Find all of the words for that cluster number, and print them out\n",
-    "            words = []\n",
-    "            for i in range(0,len(list(word_centroid_map.values()))):\n",
-    "                if( list(word_centroid_map.values())[i] == cluster ):\n",
-    "                    words.append(list(word_centroid_map.keys())[i])\n",
-    "            print(words[:10])\n",
-    "\n",
-    "        pass\n",
     "\n",
     "# global variables\n",
     "WORD2VEC_VECTOR_SIZE = 300\n",
@@ -196,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44819367",
+   "id": "6cc707f4",
    "metadata": {},
    "source": [
     "Here we'll train a Word2Vec model using the train data.\n",
@@ -208,7 +176,7 @@
    "execution_count": 29,
    "id": "674e3b7f",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -221,13 +189,29 @@
    ],
    "source": [
     "word2vec_model = SaHandler.train_word2vec_model(WORD2VEC_VECTOR_SIZE)\n",
-    "SentimentAnalysis.save_word2vec(word2vec_model, 'word2vec.bin')"
+    "SentimentAnalysis.save_word2vec(word2vec_model, 'word2vec.bin')\n",
+    "word_vectors = word2vec_model.wv"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "63b798ff",
+   "metadata": {},
+   "source": [
+    "What if we visualize the generated word2vec model?\n",
+    "In order to do it we'll need some kind of clustering algorithm; we'll use k-Means. I've also tried DBSCAN and OPTICS, as they are other methods found on [sk-learn](https://scikit-learn.org/stable/modules/clustering.html#overview-of-clustering-methods), but it seems like there's no relevant separation to use a density-based algorithm, as they both report one single group.\n",
+    "\n",
+    "Some information needed to understand what we'll do next:\n",
+    "- `Word2Vec#wv.vectors` will return a matrix of `<number of input words> rows x <vector size> columns`, representing (for each input word) its vector\n",
+    "- `Word2Vec#wv.index_to_key` will return a list with all the input words. This will be useful in order to relate a vector to an actual word\n",
+    "Also, the section [\"What can I do with word vectors?\", on gensim wiki](https://radimrehurek.com/gensim/models/keyedvectors.html#what-can-i-do-with-word-vectors) is very interesting to see the word extrapolation, but it won't be discussed in this Jupyter Notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "6c664187",
+   "execution_count": 50,
+   "id": "9fa41da8",
    "metadata": {
     "scrolled": true
    },
@@ -236,41 +220,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Cluster 0\n",
-      "['or', 'work', 'never', 'water', 'while', 'wearing', 'working', 'worn', 'under', 'etc']\n",
-      "\n",
-      "Cluster 1\n",
-      "['i', 'was', 'had', 'me', 'bought', 'am', 'amazon', 'buy', 'he', 'first']\n",
-      "\n",
-      "Cluster 2\n",
-      "['of', 'that', 'have', 'as', 'one', 'watches', 'than', 'they', 'other', 've']\n",
-      "\n",
-      "Cluster 3\n",
-      "['you', 'time', 'if', 'use', 'day', 'battery', 'do', 'your', 'date', 'set']\n",
-      "\n",
-      "Cluster 4\n",
-      "['it', 'a', 'and', 'watch', 'is', 'this', 'but', 'not', 's', 'very']\n",
-      "\n",
-      "Cluster 5\n",
-      "['years', 'year', 'months', 'days', 'times', 'month', 'week', 'seconds', 'minutes', 'weeks']\n",
-      "\n",
-      "Cluster 6\n",
-      "['to', 'in', 'my', 'with', 't', 'so', 'at', 'has', 'can', 'just']\n",
-      "\n",
-      "Cluster 7\n",
-      "['are', 'which', 'face', 'light', 'read', 'see', 'hand', 'case', 'dial', 'hands']\n",
-      "\n",
-      "Cluster 8\n",
-      "['for', 'about', 'after', 'been', 'now', 'two', 'over', '2', '5', 'few']\n",
-      "\n",
-      "Cluster 9\n",
-      "['the', 'on', 'be', 'band', 'out', 'up', 'get', 'off', 'little', 'back']\n"
+      "(14340,)\n",
+      "Cluster 0: ['for', 'of', 'in', 'my', 'with', 'at', 'has', 'just', 'when', 'an']\n",
+      "Cluster 1: ['to', 'on', 'band', 'or', 'out', 'up', 'get', 'wrist', 'off', 'little']\n",
+      "Cluster 2: ['the', 'are', 'which', 'face', 'also', 'light', 'read', 'there', 'see', 'hand']\n",
+      "Cluster 3: ['you', 'time', 'use', 'day', 'your', 'date', 'work', 'set', 'second', 'need']\n",
+      "Cluster 4: ['about', 'after', 'now', 'two', 'over', '2', '5', 'few', '3', 'many']\n",
+      "Cluster 5: ['it', 'a', 'and', 'watch', 'is', 'this', 's', 'very', 'great', 'like']\n",
+      "Cluster 6: ['i', 'that', 'but', 'have', 'not', 'as', 't', 'one', 'so', 'be']\n",
+      "Cluster 7: ['was', 'had', 'me', 'bought', 'years', 'amazon', 'battery', 'been', 'he', 'first']\n",
+      "Cluster 8: ['can', 'would', 'will', 'don', 'does', 'could', 'did', 'doesn', 'should', 'didn']\n",
+      "Cluster 9: ['compliments', 'comments']\n"
      ]
     }
    ],
    "source": [
-    "SaHandler.clusterize(word2vec_model)"
+    "num_clusters = 10\n",
+    "\n",
+    "# Initalize a k-means object and use it to extract centroids\n",
+    "kmeans_clustering = KMeans( n_clusters = num_clusters, n_init='auto' )\n",
+    "# `fit_predict` will force each of the `word_vectors.vectors` vectors into one of the 10 clusters\n",
+    "idx = kmeans_clustering.fit_predict( word_vectors.vectors )\n",
+    "\n",
+    "# Create a Word / Index dictionary, mapping each vocabulary word to a cluster number\n",
+    "word_centroid_map = dict(list(zip( word_vectors.index_to_key, idx )))\n",
+    "\n",
+    "# For each cluster\n",
+    "for cluster in range(num_clusters):\n",
+    "    # Find all of the words for that cluster number, and print them out\n",
+    "    words = []\n",
+    "    for key, value in zip(list(word_centroid_map.keys()),list(word_centroid_map.values())):\n",
+    "        if (value == cluster):\n",
+    "            words.append(key)\n",
+    "    \n",
+    "    print(f\"Cluster {cluster}: {words[:10]}\")"
    ]
   },
   {
