--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 29,
    "id": "5b179ce6",
    "metadata": {
     "scrolled": false
@@ -21,6 +21,10 @@
     "\n",
     "from sklearn.cluster import KMeans\n",
     "\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Bidirectional, LSTM, Dense, Activation, TimeDistributed\n",
+    "\n",
     "import multiprocessing # number of threads\n",
     "\n",
     "import matplotlib.pyplot as plt # plot\n",
@@ -31,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "id": "1c523f73",
    "metadata": {},
    "outputs": [],
@@ -118,6 +122,7 @@
     "\n",
     "# global variables\n",
     "WORD2VEC_VECTOR_SIZE = 300\n",
+    "HIDDEN_DIM = 52 # must be a power of 2\n",
     "\n",
     "# create an inscance of the class\n",
     "SaHandler=SentimentAnalysis('data/Watches_withstopwords.json.gz', random_state=1)"
@@ -125,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "18eca26b",
    "metadata": {},
    "outputs": [
@@ -143,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "eb0cc499",
    "metadata": {
     "scrolled": false
@@ -173,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "674e3b7f",
    "metadata": {
     "scrolled": false
@@ -194,7 +199,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "63b798ff",
    "metadata": {},
@@ -210,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "id": "9fa41da8",
    "metadata": {
     "scrolled": true
@@ -220,17 +224,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(14340,)\n",
-      "Cluster 0: ['for', 'of', 'in', 'my', 'with', 'at', 'has', 'just', 'when', 'an']\n",
-      "Cluster 1: ['to', 'on', 'band', 'or', 'out', 'up', 'get', 'wrist', 'off', 'little']\n",
-      "Cluster 2: ['the', 'are', 'which', 'face', 'also', 'light', 'read', 'there', 'see', 'hand']\n",
-      "Cluster 3: ['you', 'time', 'use', 'day', 'your', 'date', 'work', 'set', 'second', 'need']\n",
-      "Cluster 4: ['about', 'after', 'now', 'two', 'over', '2', '5', 'few', '3', 'many']\n",
-      "Cluster 5: ['it', 'a', 'and', 'watch', 'is', 'this', 's', 'very', 'great', 'like']\n",
-      "Cluster 6: ['i', 'that', 'but', 'have', 'not', 'as', 't', 'one', 'so', 'be']\n",
-      "Cluster 7: ['was', 'had', 'me', 'bought', 'years', 'amazon', 'battery', 'been', 'he', 'first']\n",
-      "Cluster 8: ['can', 'would', 'will', 'don', 'does', 'could', 'did', 'doesn', 'should', 'didn']\n",
-      "Cluster 9: ['compliments', 'comments']\n"
+      "Cluster 0: ['can', 'don', 'doesn', 'didn', 'won', 'isn', 'haven', 'couldn', 'wasn', 'wouldn']\n",
+      "Cluster 1: ['the', 'that', 'but', 'not', 'band', 'than', 'which', 'face', 'other', 'wrist']\n",
+      "Cluster 2: ['i', 'was', 'one', 'had', 'watches', 'me', 'price', 'they', 'bought', 'years']\n",
+      "Cluster 3: ['time', 'only', 'day', 'light', 'there', 'date', 'second', 'set', 'how', 'hand']\n",
+      "Cluster 4: ['water']\n",
+      "Cluster 5: ['a', 'of', 'my', 'with', 'as', 'so', 'at', 'has', 'are', 'would']\n",
+      "Cluster 6: ['to', 'in', 'on', 'or', 'just', 'when', 'out', 'up', 'still', 'off']\n",
+      "Cluster 7: ['it', 'and', 'watch', 'is', 'this', 's', 'very', 'great', 'like', 'good']\n",
+      "Cluster 8: ['have', 'you', 't', 'be', 'if', 'get', 'wear', 'use', 'do', 'buy']\n",
+      "Cluster 9: ['for', 'about', 'after', 'two', 'over', '2', '5', 'few', '3', '1']\n"
      ]
     }
    ],
@@ -258,33 +261,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "42528eaf",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 60,
+   "id": "5f443f09",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 2, 300)\n",
+      "(2, 5)\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 0.7268 - accuracy: 0.0000e+00\n",
+      "Layer 0: (None, 2, 300), (None, 52)\n",
+      "Layer 1: (None, 52), (None, 5)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-03-24 02:54:20.884995: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "\n",
+      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
+      "2023-03-24 02:54:20.953456: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "\n",
+      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
+      "2023-03-24 02:54:20.953735: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "\n",
+      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
+      "2023-03-24 02:54:20.954013: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "\n",
+      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n"
+     ]
+    }
+   ],
    "source": [
-    "SaHandler.divideTrainTest()"
+    "# TODO Average of Word2Vec vectors with TF-IDF : this is one of the best approach which I will recommend. Just take the word vectors and multiply it with their TF-IDF scores. Just take the average and it will represent your sentence vector.\n",
+    "# @ref https://stackoverflow.com/a/31738627/9178470\n",
+    "\n",
+    "inputs = tf.keras.Input(shape=(None, 2, 300))\n",
+    "\n",
+    "model = Sequential()\n",
+    "# Assuming that your input size (X.shape) is n X t X f where\n",
+    "# n:Batch size\n",
+    "# t: sequence length/time-steps/no:of unrollings)\n",
+    "# f: Nºof feature per time-step\n",
+    "# Note: input_shape=(t,f)\n",
+    "# @ref https://stackoverflow.com/a/62994263/9178470\n",
+    "vector_processor = Bidirectional(LSTM(HIDDEN_DIM // 2, return_sequences=False),\n",
+    "                        input_shape=(inputs.shape[-2], inputs.shape[-1]),\n",
+    "                        merge_mode='concat') # concat will return n X t X <HIDDEN_DIM/2>*2 # TODO why *2 and not *<nº of LSTM>?\n",
+    "model.add(vector_processor)\n",
+    "model.add(Dense(5, activation='softmax'))\n",
+    "#model.add(Activation('softmax'))\n",
+    "model.compile(optimizer='sgd', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "X = np.stack(( np.stack((word_vectors.vectors[0], word_vectors.vectors[1])),\n",
+    "             np.stack((word_vectors.vectors[3], word_vectors.vectors[4])) )) # example of phrases (<num inputs>x<max words of review>x<vector size>)\n",
+    "y = np.stack(( np.array([0,0,0,0,1]), np.array([0,1,0,0,0]) )) # score 5 and 2\n",
+    "print(X.shape)\n",
+    "print(y.shape)\n",
+    "model.fit(X, y, epochs=1, batch_size=32)\n",
+    "#model(X)\n",
+    "\n",
+    "for i,layer in enumerate(model.layers):\n",
+    "    print(f\"Layer {i}: {layer.input_shape}, {layer.output_shape}\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53cb31c8",
+   "id": "2d8c0e48",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "SaHandler.learn()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3d05264d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SaHandler.evaluate()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
